feat: adding pages under development

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -10,4 +10,4 @@ permalink: /404.html
 
 The requested page could not be found.
 
-<a href="{{ site.baseurl }}/" class="link-body-emphasis link-underline link-underline-opacity-0">Back</a>
+<a href="/" class="link-body-emphasis link-underline link-underline-opacity-0">Back</a>
